crates/python_parser/src/parser/tests/snapshots/python_parser__parser__tests__suite__tests__parse_dict_comprehension.snap
---
source: crates/python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
(
    DictComp(
        DictCompExpr {
            range: 0..19,
            key: Name(
                NameExpr {
                    range: 1..3,
                    id: "x1",
                    ctx: Load,
                },
            ),
            value: Name(
                NameExpr {
                    range: 5..7,
                    id: "x2",
                    ctx: Load,
                },
            ),
            generators: [
                Comprehension {
                    range: 8..18,
                    target: Name(
                        NameExpr {
                            range: 12..13,
                            id: "y",
                            ctx: Store,
                        },
                    ),
                    iter: Name(
                        NameExpr {
                            range: 17..18,
                            id: "z",
                            ctx: Load,
                        },
                    ),
                    ifs: [],
                    is_async: false,
                },
            ],
        },
    ),
    [],
)
